[package]
edition = "2021"
name = "dilithium-crypto"
version = "0.1.0"

[dependencies]
codec = { workspace = true, default-features = false }
log = { workspace = true }
poseidon-resonance = { workspace = true }
rusty-crystals-dilithium.workspace = true
scale-info = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-runtime-interface = { version = "29.0.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
env_logger = "0.11.5"

[features]
default = ["std"]
full_crypto = [ # pass through for "sign" in pair trait.
	"sp-core/full_crypto",
]
serde = [
	"poseidon-resonance/serde",
	"sp-core/serde",
]
std = [
	"codec/std",
	"poseidon-resonance/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
]
