[package]
edition = "2021"
name = "dilithium-crypto"
version = "0.1.0"

[dependencies]
codec = { workspace = true, default-features = false }
log = { workspace = true }
qp-poseidon = { workspace = true }
qp-rusty-crystals-dilithium.workspace = true
scale-info = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
env_logger.workspace = true

[features]
default = ["std"]
full_crypto = [
	"sp-core/full_crypto",
]
serde = [
	"qp-poseidon/serde",
	"sp-core/serde",
]
std = [
	"codec/std",
	"qp-poseidon/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"thiserror",
]
