[package]
name = "quantus-node"
description = "Quantus Node - Echo Chamber"
version = "0.0.4"
license = "Apache-2.0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
default-run = "quantus-node"

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait.workspace = true
clap = { features = ["derive"], workspace = true }
codec.workspace = true
dilithium-crypto.workspace = true
frame-benchmarking-cli.default-features = true
frame-benchmarking-cli.workspace = true
frame-metadata-hash-extension.default-features = true
frame-metadata-hash-extension.workspace = true
frame-system.default-features = true
frame-system.workspace = true
futures = { features = ["thread-pool"], workspace = true }
hex = { workspace = true, default-features = false }
jsonrpsee = { features = ["server"], workspace = true }
log.workspace = true
pallet-faucet.default-features = false
pallet-faucet.workspace = true
pallet-transaction-payment-rpc.default-features = true
pallet-transaction-payment-rpc.workspace = true
pallet-transaction-payment.default-features = true
pallet-transaction-payment.workspace = true
primitive-types = { workspace = true, default-features = false }
prometheus.workspace = true
rand = { workspace = true, default-features = false, features = [
    "alloc",
    "getrandom",
] }
reqwest = { workspace = true, default-features = false, features = ["json"] }
resonance-miner-api = { path = "../resonance-miner-api", default-features = false }
quantus-runtime.workspace = true
rusty-crystals-hdwallet.workspace = true
sc-basic-authorship.default-features = true
sc-basic-authorship.workspace = true
sc-cli.default-features = true
sc-cli.workspace = true
sc-client-api.default-features = true
sc-client-api.workspace = true
sc-consensus-pow.workspace = true
sc-consensus-qpow.workspace = true
sc-consensus.default-features = true
sc-consensus.workspace = true
sc-executor.default-features = true
sc-executor.workspace = true
sc-network.default-features = true
sc-network.workspace = true
sc-offchain.default-features = true
sc-offchain.workspace = true
sc-service.default-features = true
sc-service.workspace = true
sc-telemetry.default-features = true
sc-telemetry.workspace = true
sc-transaction-pool-api.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool.default-features = true
sc-transaction-pool.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
sp-api.default-features = true
sp-api.workspace = true
sp-block-builder.default-features = true
sp-block-builder.workspace = true
sp-blockchain.default-features = true
sp-blockchain.workspace = true
sp-consensus-qpow.workspace = true
sp-core.default-features = true
sp-core.workspace = true
sp-faucet = { workspace = true, default-features = false }
sp-genesis-builder.default-features = true
sp-genesis-builder.workspace = true
sp-inherents.default-features = true
sp-inherents.workspace = true
sp-io.default-features = true
sp-io.workspace = true
sp-keyring.default-features = true
sp-keyring.workspace = true
sp-runtime.default-features = true
sp-runtime.workspace = true
sp-timestamp.default-features = true
sp-timestamp.workspace = true
substrate-frame-rpc-system.default-features = true
substrate-frame-rpc-system.workspace = true
uuid.workspace = true

[build-dependencies]
substrate-build-script-utils.workspace = true
substrate-build-script-utils.default-features = true

[features]
default = ["std"]
std = [
    "dilithium-crypto/std",
    "rand/std",
    "quantus-runtime/std",
]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
    "frame-benchmarking-cli/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-transaction-payment/runtime-benchmarks",
    "sc-service/runtime-benchmarks",
    "quantus-runtime/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
    "frame-system/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "quantus-runtime/try-runtime",
    "sp-runtime/try-runtime",
]
