[package]
authors.workspace = true
description = "FRAME pallet to manage balances"
edition.workspace = true
homepage.workspace = true
license = "Apache-2.0"
name = "pallet-balances"
readme = "README.md"
repository.workspace = true
version = "40.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive", "max-encoded-len"], workspace = true }
docify = { workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
poseidon-resonance = { workspace = true, features = ["serde"] }
qp-wormhole = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-runtime.workspace = true

[dev-dependencies]
frame-support = { workspace = true, features = ["experimental"], default-features = true }
pallet-transaction-payment.workspace = true
pallet-transaction-payment.features = ["std"]
paste.workspace = true
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"qp-wormhole/std",
	"scale-info/std",
	"sp-runtime/std",
]
# Enable support for setting the existential deposit to zero.
insecure_zero_ed = []
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
